--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ pydantic_core==2.23.4
 python-dotenv==1.0.1
 typing_extensions==4.12.2
 yarl==1.18.3
+
+pymorphy2~=0.9.1
+razdel~=0.5.0
+natasha~=1.6.0
